# AdventOfCode

./: .gitignore  package-lock.json  package.json  pyproject.toml  tsconfig.json
1/: 1.js  1.js.map  1.py  1.ts
2/: 2.py  test_data.txt
3/: 3.py
4/: 4.py
5/: 5.py
6/: 6.py
