[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Adam Smelkowski <adamsmelkowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipdb = "^0.13.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
